# FrenosElControlFront

./: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
my-react-router-app/: package-lock.json
my-react-router-app/app/: app.css
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/backend/: FrenosElControl.db
src-tauri/src/: main.rs
src-tauri/src/api/: api_client.rs  api_response.rs  mod.rs
src-tauri/src/commands/: auth_commands.rs  base_url.rs  customer_commands.rs  item_commands.rs  mod.rs  vehicle_commands.rs
src-tauri/src/err/: http_error.rs  mod.rs
src-tauri/src/model/: auth.rs  brandCar.rs  carType.rs  customer.rs  inventory.rs  invoice.rs  item.rs  itemType.rs  mod.rs  payment.rs  pdf.rs  purchaseHistory.rs  refreshRequest.rs  salesHistory.rs  vehicle.rs
src-tauri/src/repository/: auth_repository.rs  customer_repository.rs  item_repository.rs  mod.rs  vehicle_repository.rs
src-tauri/src/service/: auth_service.rs
src/app/: App.css  App.tsx
src/entity/: Customer.ts  Invoice.ts  InvoiceItems.ts  Item.ts  LoginResponse.ts  PaymentType.ts  Product.ts  StatusInvoice.ts  Vehicle.ts  index.ts
src/entity/wrapper/: wrappers.ts
src/form/: CustomerForm.ts  InvoiceForm.ts  ProductForm.ts
src/function/: customerAPI.ts  fetchClientesAPI.ts  getToken.ts  index.ts  itemAPI.ts  productAPI.ts  safeInvoke.ts
src/hooks/: useFetch.ts
src/hooks/customers/: useCustomer.ts  useCustomerByName.ts
src/hooks/useProduct/: useItemByDescriptionLetter.ts  useProduct.ts  useProductByDescription.ts  (+1 more)
(+105 files in other folders)
