[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.4", features = [] }
tauri-plugin-log = "2.0.0-rc"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-http = "2.0.0-rc"
bytes = "1.10.0"
thiserror = "2.0.11"   # El plugin nuevo para HTTP
